# mercury-dataschema

./: .bumpversion.cfg  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_coverage.sh
.github/workflows/: docs-build.yml  publish.yml  pypi_upload.yml  test.yml
docs/: index.md
docs/reference/: dataschema.md
mercury/dataschema/: __init__.py  anonymize.py  calculator.py  create_tutorials.py  feature.py  schemagen.py
mercury/dataschema/tutorials/: hello_dataschema.ipynb
reference/dataschema/: index.html
site/: 404.html  index.html  objects.inv
site/reference/dataschema/: index.html
tests/dataschema/: test_anonymize.py  test_calculator.py  test_create_tutorials.py  test_feature.py  test_schemagen.py
